button spacing fix, margin-right set to @double

--- a/styles/mixins.less
+++ b/styles/mixins.less
@@ -73,6 +73,7 @@
 	border: @bg-border;
 	border-radius: @radius;
 	padding: @base;
+	margin-right: @double;
 	border-color: @highlightColour;
 	color: @highlightColour;
 	background: none;
