--- a/styles/variables.less
+++ b/styles/variables.less
@@ -156,7 +156,7 @@
 @screen-tablet-container: @screen-tablet - (@double * 2);
 @screen-desktop: 992px;
 @screen-desktop-container: @screen-desktop - (@double * 2);
-@screen-lg-desktop: 1400px;
+@screen-lg-desktop: 1600px;
 @screen-lg-desktop-container: @screen-lg-desktop - (@double * 2);
 
 // Fixed widths and heights
